--- a/lab3/works.bib
+++ b/lab3/works.bib
@@ -14,3 +14,9 @@
   year = {2004},
   organization = {Engineeringtoolbox}
 }
+
+@misc{coefficients,
+  title = {Coefficients of Friction},
+  url = {https://www.physlink.com/reference/frictioncoefficients.cfm},
+  organization = {www.physlink.com}
+}
